# NCAP

./: .gitignore  .gitmodules  .project  LICENSE  README.md  adb.txt  gradle.properties  log.sh  run.sh  settings.gradle.kts
app/: .project  build.gradle.kts
app/src/androidTest/java/com/example/rlcap/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/msun/ncap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  aaudio_bind.c  algs.c  algs.h  audio.c  audio.h  cmake_install.cmake  compile_commands.json  config.c  config.h  configure.dump  copy_headers.cmake  ffmpeg.cmake  ffmpeg_build_system.cmake  libav_bind.c  logging.h  main.c  makefile  native-lib.c  properties.h  render.c  render.h  strqueue.c  strqueue.h  strvec.c  strvec.h  util.h
app/src/main/c/.cache/clangd/index/: native-lib.c.08BE4A2227E3EA47.idx
app/src/main/c/tests/: makefile  test.c  test.cfg  test.h  test_algs.c  test_config.c  test_strqueue.c  test_strvec.c  testall.sh  testlist.txt
app/src/main/java/com/msun/ncap/: MainActivity.java
app/src/main/java/com/msun/rlcap/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rlcap/: ExampleUnitTest.java
app/src/test/java/com/msun/ncap/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
